<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hero_detail_image">英雄详情图片</string>
    <string name="hero_detail_basic_info">基本信息</string>
    <string name="hero_detail_english_name">英文名</string>
    <string name="hero_detail_role">定位</string>
    <string name="hero_detail_balance_data">平衡性数据</string>
    <string name="hero_detail_win_rate">胜率</string>
    <string name="hero_detail_pick_rate">登场率</string>
    <string name="hero_detail_kda">KDA</string>
    <string name="hero_detail_description">英雄描述</string>
    <string name="hero_detail_skills">技能介绍</string>
    <string name="hero_detail_counter_tips">克制提示</string>
    <string name="hero_detail_synergies">阵容搭配</string>
    <string name="hero_detail_recommended_build">推荐出装</string>
    <string name="hero_detail_recommended_augments">推荐符文</string>
    <string name="strong_level_explain">强度等级说明</string>
    <string name="filter_by_tier">按Tier筛选</string>
    <string name="tier_all">全部</string>
    <string name="tier_s_plus">S+</string>
    <string name="tier_s">S</string>
    <string name="tier_a">A</string>
    <string name="tier_b">B</string>
    <string name="tier_c">C</string>
    <string name="retry">重试</string>
</resources>
